# ECSE4320_Advanced_Computer_Systems_Projects

./: README.md
Project_1/: CMakeLists.txt  README.md
Project_1/data/: results_alignment.csv  results_baseline.csv  results_clean.csv  results_locality.csv  results_stride.csv
Project_1/include/: kernels.hpp  utils.hpp
Project_1/py/: plot_results.py
Project_1/scripts/: alignment_summary.py  clean_csv.py  correctness.py  locality_annotated.py  plot.py  plot_locality.py  plot_stride_extra.py  plot_tail.py  roofline.py  run_sweeps.sh  stream_like.cpp  stride_extra.py  tail_plot.py
Project_1/src/: kernels_scalar.cpp  kernels_simd_friendly.cpp  main.cpp  utils.cpp
Project_2/: README.md  run_all.sh
Project_2/data/: mlc_cache_miss.csv  mlc_gran_mix.csv  mlc_intensity.csv  mlc_rw_mix.csv  mlc_tlb.csv  mlc_workingset.csv  zero_queue.csv  zero_queue_with_err.csv
Project_2/plots/: plot_cache_miss.py  plot_granularity.py  plot_rw_mix.py  plot_tlb.py  plot_tradeoff.py  plot_workingset.py  plot_zero_queue.py
Project_2/scripts/: populate_from_sparse.py
Project_2/tables/: zero_queue_table.md  zero_queue_table_with_cycles.md
Project_3/: README.md
Project_3/data/: bs_random.csv  bs_seq.csv  granularity_matrix.csv  impact_cache.csv  impact_tlb.csv  mix_sweep.csv  qd_tradeoff.csv  tails.csv  working_set_sizes.csv  zero_queue.csv
Project_3/plots/: plot_bs_random.py  plot_bs_seq.py  plot_cache.py  plot_from_csv.py  plot_granularity.py  plot_mix.py  plot_qd.py  plot_tails.py  plot_tlb.py  plot_wss.py  plot_zeroq.py  run_all_plots.sh  util.py
Project_3/scripts/: collect_bs_random.sh  (+6 more)
Project_A1/: Makefile  README.md  affinity  mmu  prefetch  results.csv  same.txt  smt  smt_same.txt  smt_spread.txt  spread.txt
Project_A3/: CMakeLists.txt  README.md
Project_A3/include/: blocked_bloom.hpp  cuckoo_filter.hpp  hash.hpp  quotient_filter.hpp  util.hpp  xor_filter.hpp
Project_A3/scripts/: perf_wrap.sh  plot_a3.sh  plot_results.py  run_a3_all.sh  run_full_sweeps.py  run_sweeps.sh
Project_A3/src/: main.cpp
Project_A3/tests/: validate.cpp
Project_A4/: Makefile  README.md  bench
(+15 files in other folders)
